Fixed extra padding in FireFox.

--- a/sites/all/themes/custom/bvng/less/views-slideshow.less
+++ b/sites/all/themes/custom/bvng/less/views-slideshow.less
@@ -26,6 +26,7 @@
     select {
       height: 20px;
       font-size: 11px;
+      padding: 0px;
     }
     .views-exposed-widget {
       button {
